changes by cincia 1.0

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <a class="nav-link js-scroll-trigger" href="#experience">Erfahrung</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#education">Bildung</a>
+            <a class="nav-link js-scroll-trigger" href="#education">Ausbildung</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#skills">Kompetenzen</a>
@@ -72,7 +72,7 @@
             <a href="mailto:c.hirschvogl@gmail.com">c.hirschvogl@gmail.com</a>
           </div>
           <p class="mb-5">
-            I was born in a multicultural city in Romania and had a bilingual up-bringing that included German and Romanian. I studied German and Italian with a Second Language and Conference Interpreting emphasis on German in Romania, Germany, Italy and Austria. Currently, I am working as a German teacher, a university lecturer for the Centre for Translation Studies at the University of Vienna, and as a conference interpreter.
+            I was born in a multicultural city in Romania and had a bilingual up-bringing that included German and Romanian. I studied German and Italian with a Second Language and Conference Interpreting emphasis on German in Romania, Germany, Italy and Austria. Currently, I am working as a German teacher, a university lecturer for the Centre for Translation Studies at the University of Wien, and as a conference interpreter.
             <br>
             Language pairs: German >< Romanian, English > Romanian, Italian > Romanian
           </p>
@@ -108,24 +108,13 @@
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="experience">
         <div class="my-auto">
 
-          <div class="resume-item d-flex flex-column flex-md-row mb-5">
-            <div class="resume-content mr-auto">
-              <h3 class="mb-0">Freelance Dolmetscherin und Übersetzerin</h3>
-              <div class="subheading mb-3">Freelance</div>
-              <p>Romanisch, Deutsch, Englisch, Italienisch</p>
-            </div>
-            <div class="resume-date text-md-right">
-              <span class="text-primary">seit Januar 2011</span>
-            </div>
-          </div>
-
           <h2 class="mb-5">Lehre</h2>
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Universität Dozent</h3>
-              <div class="subheading mb-3">Centre for Translation Studies, Universität Wien</div>
-              <p>Universität Lehrerin in Uni Wien</p>
+              <h3 class="mb-0">Universitätslektorin</h3>
+              <div class="subheading mb-3">Zentrum für Translationswissenschaft, Universität Wien</div>
+              <p>Lehrveranstaltungen im BA und MA</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">seit Februar 2015</span>
@@ -134,9 +123,9 @@
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Deutsch Lehrerin</h3>
-              <div class="subheading mb-3">INNES Vienna</div>
-              <p>Deutch Lehrerin in INNES Vienna</p>
+              <h3 class="mb-0">Deutschlehrerin</h3>
+              <div class="subheading mb-3">INNES Wien</div>
+              <p>Deutch Lehrerin in INNES Wien</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">seit September 2015</span>
@@ -145,7 +134,7 @@
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Deutsch Lehrerin</h3>
+              <h3 class="mb-0">Deutschlehrerin</h3>
               <div class="subheading mb-3">Loqui - Sprach-und Bildungsinstitut</div>
               <p>Deutch Lehrerin, Wien</p>
             </div>
@@ -156,7 +145,7 @@
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Deutsch Lehrerin</h3>
+              <h3 class="mb-0">Deutschlehrerin</h3>
               <div class="subheading mb-3">Active Learning</div>
               <p>Deutch Lehrerin, Timisoara</p>
             </div>
@@ -167,6 +156,17 @@
 
 
           <h2 class="mb-5">Dolmetschen</h2>
+
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">Freelance Dolmetscherin und Übersetzerin</h3>
+              <div class="subheading mb-3">Freelance</div>
+              <p>Rumänisch, Deutsch, Englisch, Italienisch</p>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">seit Januar 2011</span>
+            </div>
+          </div>
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
@@ -399,7 +399,7 @@
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="education">
         <div class="my-auto">
-          <h2 class="mb-5">Bildung</h2>
+          <h2 class="mb-5">Ausbildung</h2>
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
@@ -467,7 +467,7 @@
               Übersetzen</li>
           </ul>
           <br>
-          <div class="subheading mb-3">Bildung</div>
+          <div class="subheading mb-3">Ausbildung</div>
           <ul class="fa-ul mb-0">
             <li>
               <i class="fa-li fa fa-check"></i>
