--- a/index.html
+++ b/index.html
@@ -78,18 +78,10 @@
           </p>
           <ul class="list-inline list-social-icons mb-0">
             <li class="list-inline-item">
-              <a href="#">
+              <a href="https://www.facebook.com/cinzia.carmina">
                 <span class="fa-stack fa-lg">
                   <i class="fa fa-circle fa-stack-2x"></i>
                   <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
-                </span>
-              </a>
-            </li>
-            <li class="list-inline-item">
-              <a href="#">
-                <span class="fa-stack fa-lg">
-                  <i class="fa fa-circle fa-stack-2x"></i>
-                  <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
                 </span>
               </a>
             </li>
@@ -170,9 +162,9 @@
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Dolmetscherin</h3>
-              <div class="subheading mb-3">Marshaly</div>
-              <p>Financial Insurance Associated, Timisoara</p>
+              <h3 class="mb-0">Konsekutivdolmetschung</h3>
+              <div class="subheading mb-3">(DE>&#60;RO)</div>
+              <p>Konsekutivdolmetschung für Marshaly (Financial Insurance Associated), Timisoara</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">Oktober 2008 - Februar 2009</span>
@@ -482,7 +474,7 @@
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
         <div class="my-auto">
           <h2 class="mb-5">Interessen</h2>
-          <p>My areas of interest regarding language training involve group dynamics, autonomous learning, literature and music, empathy, Austrian culture, and having fun with the learning and teaching process.</p>
+          <p>Dolmetschdidaktik, Übersetzungsdidaktik, Feedback und Evaluierung, Didaktik des Deutschen als Fremd- und Zweitsprache, Kultur- und Literaturwissenschaft.</p>
         </div>
       </section>
 
@@ -492,7 +484,7 @@
           <ul class="fa-ul mb-0">
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
-              Licensed TELC examiner for German A1, A2, B1 and B2 - telcGmbH</li>
+              TELC-Prüferin für Deutsch A1, A2, B1 und B2</li>
           </ul>
         </div>
       </section>
