--- a/index.html
+++ b/index.html
@@ -385,6 +385,16 @@
             </div>
           </div>
 
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">Übersetzerin</h3>
+              <p>Technische Übersetzungen in den verschiedensten Bereichen</p>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">seit 2008</span>
+            </div>
+          </div>
+
         </div>
 
       </section>
