--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Deutschlehrerin</h3>
               <div class="subheading mb-3">INNES Wien</div>
-              <p>Deutch Lehrerin in INNES Wien</p>
+              <p>Deutschlehrerin in INNES Wien</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">seit September 2015</span>
@@ -128,7 +128,7 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Deutschlehrerin</h3>
               <div class="subheading mb-3">Loqui - Sprach-und Bildungsinstitut</div>
-              <p>Deutch Lehrerin, Wien</p>
+              <p>Deutschlehrerin, Wien</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">September 2013 - December 2014</span>
@@ -139,7 +139,7 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Deutschlehrerin</h3>
               <div class="subheading mb-3">Active Learning</div>
-              <p>Deutch Lehrerin, Timisoara</p>
+              <p>Deutschlehrerin, Timisoara</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">März 2009 - Juli 2010</span>
@@ -157,17 +157,6 @@
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">seit Januar 2011</span>
-            </div>
-          </div>
-
-          <div class="resume-item d-flex flex-column flex-md-row mb-5">
-            <div class="resume-content mr-auto">
-              <h3 class="mb-0">Konsekutivdolmetschung</h3>
-              <div class="subheading mb-3">(DE>&#60;RO)</div>
-              <p>Konsekutivdolmetschung für Marshaly (Financial Insurance Associated), Timisoara</p>
-            </div>
-            <div class="resume-date text-md-right">
-              <span class="text-primary">Oktober 2008 - Februar 2009</span>
             </div>
           </div>
 
@@ -359,6 +348,18 @@
               <span class="text-primary">April 2012 - November 2012</span>
             </div>
           </div>
+
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">Konsekutivdolmetschung</h3>
+              <div class="subheading mb-3">(DE>&#60;RO)</div>
+              <p>Konsekutivdolmetschung für Marshaly (Financial Insurance Associated), Timisoara</p>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">Oktober 2008 - Februar 2009</span>
+            </div>
+          </div>
+
           </div>
 
           <br>
