--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
             </div>
           </div>
 
-          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+          <div class="resume-item d-flex flex-column flex-md-row">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Konsekutivdolmetschung</h3>
               <div class="subheading mb-3">(DE>&#60;RO)</div>
