--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Deutschlehrerin</h3>
               <div class="subheading mb-3">INNES Wien</div>
-              <p>Deutschlehrerin in INNES Wien</p>
+              <p>Deutschlehrerin, Wien</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">seit September 2015</span>
