--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
           </div>
 
           <div class="slider">
-            <h3><i class="fa fa-caret-right" aria-hidden="true"></i> Expand Interpretations</h3>
+            <h3><i class="fa fa-caret-right" aria-hidden="true"></i>Dolmetschungen aufklappen</h3>
           </div>
           <div class="hider" style="display: none;">
           <div class="resume-item d-flex flex-column flex-md-row">
